--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -60,16 +60,16 @@ jobs:
           ref: v${{ matrix.build_env.tag }}
           fetch-depth: 0
 
-      - name: Cache Tools and Kernel
-        id: cache-tools-kernel
-        uses: actions/cache@v4
+      - name: Restore cached Tools and Kernel
+        id: cache-tools-kernel-restore
+        uses: actions/cache/restore@v4
         env:
-          cache-name: "cache-tools-kernel-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch}}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}"
+          cache-name: "cache-tools-kernel-${{ matrix.build_env.pkgarch}}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}"
         with:
-          path: "**"
-          key: ${{ runner.os }}-build-vm4-${{ env.cache-name }}
+          path: "openwrt/**"
+          key: ${{ runner.os }}-openwrt-${{ env.cache-name }}
           restore-keys: |
-            ${{ runner.os }}-build-vm4-cache-tools-kernel-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch}}-
+            ${{ runner.os }}-openwrt-cache-tools-kernel-${{ matrix.build_env.pkgarch}}-
 
       - name: Building kernel and tools
         #if: ${{ steps.cache-tools-kernel.outputs.cache-hit != 'true' }}
@@ -115,6 +115,15 @@ jobs:
             echo Vermagic mismatch: $VERMAGIC, expected $VERMAGIC_EXPECTED
             exit 1
           fi
+
+      - name: Save Tools and Kernel
+        id: cache-tools-kernel-save
+        uses: actions/cache/save@v4
+        env:
+          cache-name: "cache-tools-kernel-${{ matrix.build_env.pkgarch}}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}"
+        with:
+          path: "openwrt/**"
+          key: ${{ runner.os }}-openwrt-${{ env.cache-name }}
 
       - name: Build AmneziaWG
         run: |
