--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -72,7 +72,7 @@ jobs:
             ${{ runner.os }}-openwrt-cache-tools-kernel-${{ matrix.build_env.pkgarch}}-
 
       - name: Building kernel and tools
-        #if: ${{ steps.cache-tools-kernel.outputs.cache-hit != 'true' }}
+        if: ${{ steps.cache-tools-kernel-restore.outputs.cache-hit != 'true' }}
         run: |
           echo "pkgarch: ${{ matrix.build_env.pkgarch}}, target:${{ matrix.build_env.target}}, subtarget: ${{ matrix.build_env.subtarget}}"
 
@@ -117,6 +117,7 @@ jobs:
           fi
 
       - name: Save Tools and Kernel
+        if: ${{ steps.cache-tools-kernel-restore.outputs.cache-hit != 'true' }}
         id: cache-tools-kernel-save
         uses: actions/cache/save@v4
         env:
