--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -42,13 +42,16 @@ jobs:
             subtarget: ${{ inputs.openwrt_subtarget }}
             vermagic: ${{ inputs.openwrt_vermagic }}
 
+    env:
+      ref_name: ${{ github.ref_name }}
+
     steps:
-      - name: Checkout AmneziaWG-OpenWrt
+      - name: checkout amneziawg-openwrt
         uses: actions/checkout@v4
         with:
           path: amneziawg-openwrt
 
-      - name: Checkout OpenWrt
+      - name: checkout openwrt
         uses: actions/checkout@v4
         with:
           path: openwrt
@@ -56,7 +59,12 @@ jobs:
           ref: v${{ matrix.build_env.tag }}
           fetch-depth: 0
 
-      - name: Restore cached Tools and Kernel
+      - name: populate extra env
+        run: |
+          cd amneziawg-openwrt
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: restore cached tools and kernel
         id: cache-tools-kernel-restore
         uses: actions/cache/restore@v4
         env:
@@ -77,7 +85,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-openwrt-cache-tools-kernel-${{ matrix.build_env.pkgarch}}-
 
-      - name: Build AmneziaWG
+      - name: build amneziawg
         run: |
           cd openwrt
 
@@ -111,17 +119,16 @@ jobs:
           make V=s package/amneziawg-tools/{clean,download,prepare}
           make V=s package/amneziawg-tools/compile
 
-      - name: Prepare artifacts
+      - name: prepare artifacts
         run: |
-          tag_name=${{ github.ref_name }}
           mkdir -p awgrelease
-          postfix="${tag_name}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}"
+          postfix="${ref_name}-${sha_short}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}"
           cp openwrt/bin/packages/${{ matrix.build_env.pkgarch }}/awgopenwrt/amneziawg-tools_*.ipk awgrelease/amneziawg-tools_${postfix}.ipk
           cp openwrt/bin/packages/${{ matrix.build_env.pkgarch }}/awgopenwrt/luci-proto-amneziawg_*.ipk awgrelease/luci-proto-amneziawg_${postfix}.ipk
           cp openwrt/bin/targets/${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}/packages/kmod-amneziawg_*.ipk awgrelease/kmod-amneziawg_${postfix}.ipk
 
-      - name: Upload artifacts
+      - name: upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: amneziawg-${tag_name}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}
+          name: amneziawg-${ref_name}-${sha_short}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}
           path: awgrelease/*
