ci: fix artefact naming

--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -130,5 +130,5 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: amneziawg-${ref_name}-${sha_short}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}
+          name: amneziawg-${{ env.ref_name }}-${{ env.sha_short }}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}
           path: awgrelease/*
