--- a/.github/workflows/build-module-artifacts-make.yml
+++ b/.github/workflows/build-module-artifacts-make.yml
@@ -54,6 +54,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: amneziawg-openwrt
+          fetch-depth: 0
 
       - name: checkout openwrt
         uses: actions/checkout@v4
