ci: remove a few bashisms

--- a/.github/workflows/build-module-artifacts-make.yml
+++ b/.github/workflows/build-module-artifacts-make.yml
@@ -85,6 +85,7 @@ jobs:
 
       - name: build amneziawg
         run: |
+          set -x
           cd amneziawg-openwrt
           make show-env
           make build-amneziawg
