--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -68,6 +68,7 @@ jobs:
         id: cache-tools-kernel-restore
         uses: actions/cache/restore@v4
         with:
+          fail-on-cache-miss: true
           key: ${{ runner.os }}-openwrt-cache-toolchain-kernel-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch }}-${{ matrix.build_env.target }}-${{ matrix.build_env.subtarget }}
           restore-keys: |
             ${{ runner.os }}-openwrt-cache-tools-kernel-${{ matrix.build_env.pkgarch }}-
