--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -92,6 +92,7 @@ jobs:
           make show-env
           make export-env >> $GITHUB_OUTPUT
           time -p make build-amneziawg
+          make prepare-artifacts
 
       - name: upload artifacts
         uses: actions/upload-artifact@v4
