ci: add scheduled job twice a week to keep cache warm

--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -1,6 +1,8 @@
 name: build module artifacts
 
 on:
+  schedule:
+    - cron: '30 14 * * 1,5'
   workflow_dispatch:
     inputs:
       openwrt_version:
