--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -36,11 +36,11 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: ${{ inputs.openwrt_version }}
-            pkgarch: ${{ inputs.openwrt_arch }}
-            target: ${{ inputs.openwrt_target }}
-            subtarget: ${{ inputs.openwrt_subtarget }}
-            vermagic: ${{ inputs.openwrt_vermagic }}
+          - tag: ${{ inputs.openwrt_version || vars.DEFAULT_OPENWRT_VERSION }}
+            pkgarch: ${{ inputs.openwrt_arch || vars.DEFAULT_OPENWRT_ARCH }}
+            target: ${{ inputs.openwrt_target || vars.DEFAULT_OPENWRT_TARGET }}
+            subtarget: ${{ inputs.openwrt_subtarget || vars.DEFAULT_OPENWRT_SUBTARGET }}
+            vermagic: ${{ inputs.openwrt_vermagic || vars.DEFAULT_OPENWRT_VERMAGIC }}
 
     env:
       OPENWRT_RELEASE: ${{ matrix.build_env.tag }}
