kmod-amneziawg: sort patches by name while applying

--- a/kmod-amneziawg/Makefile
+++ b/kmod-amneziawg/Makefile
@@ -27,7 +27,7 @@ define Build/Prepare
 	cp -fr $(LINUX_DIR)/drivers/net/wireguard/{*.c,*.h,selftest/} $(PKG_BUILD_DIR)
 	mkdir -p $(PKG_BUILD_DIR)/uapi
 	cp -f $(LINUX_DIR)/include/uapi/linux/wireguard.h $(PKG_BUILD_DIR)/uapi/
-	for patch in $$$$(find files/ -type f -name "*.patch"); do \
+	for patch in $$$$(find files/ -type f -name "*.patch" | sort); do \
 		echo "===> applying $$$${patch}" ; \
 		patch -d $(PKG_BUILD_DIR)/ -F3 -t -p0 -i "$$$$(pwd)/$$$${patch}"; \
 	done
