--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -69,6 +69,23 @@ jobs:
           ref: v${{ matrix.build_env.tag }}
           fetch-depth: 0
 
+      - name: checkout usign
+        uses: actions/checkout@v4
+        with:
+          path: usign
+          repository: openwrt/usign
+          fetch-depth: 0
+
+      - name: build usign
+        id: build-usign
+        run: |
+          set -x
+          cd usign
+          mkdir build
+          cd build
+          cmake ..
+          make -j
+
       - name: restore cached tools and kernel
         id: cache-tools-kernel-restore
         uses: actions/cache/restore@v4
@@ -98,6 +115,15 @@ jobs:
           make export-env >> $GITHUB_OUTPUT
           time -p make build-amneziawg
           make prepare-artifacts
+
+      - name: create feed
+        id: create-feed
+        run: |
+          set -x
+          cd amneziawg-openwrt
+          ../usign/build/usign -G -s test.sec -p test.pub
+          USIGN=../usign/build/usign FEED_SEC_KEY=$(pwd)/test.sec make create-feed
+          find .feed/ -type f | sort
 
       - name: upload artifacts
         uses: actions/upload-artifact@v4
