--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -123,9 +123,10 @@ jobs:
           cd amneziawg-openwrt
           ../usign/build/usign -G -s test.sec -p test.pub
           USIGN=../usign/build/usign FEED_SEC_KEY=$(pwd)/test.sec make create-feed
-          find .feed/ -type f | sort
+          USIGN=../usign/build/usign FEED_PUB_KEY=$(pwd)/test.pub make verify-feed
 
       - name: upload artifacts
+        if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: amneziawg-${{ steps.build-amneziawg.outputs.version_str }}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}
